<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    tools:context="com.example.dev.techbuck.login">

    <ImageView
        android:id="@+id/logologin"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:src="@drawable/mylogo"
        tools:ignore="ContentDescription" />

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:errorEnabled="true"
        android:backgroundTint="#3da8dc">

        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/password"
            android:padding="10dp"
            android:drawableLeft="@drawable/email"
            tools:ignore="InvalidId" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        android:backgroundTint="#3da8dc"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:layout_marginTop="5dp"
            android:drawableLeft="@drawable/pw"
            android:nextFocusDown="@id/btnlogin"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/btnlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginTop="30dp"
        android:background="@drawable/button"
        android:text="@string/login"
        android:textAllCaps="false" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        >

        <Button
            android:id="@+id/Forgot"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/forget_password"
            android:textAllCaps="false"
            tools:ignore="ObsoleteLayoutParam" />

        <Button
            android:id="@+id/notsignup"
            style="@style/Base.Widget.AppCompat.Button.Borderless"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:text="@string/not_signup"
            android:textAllCaps="false"
            tools:ignore="ObsoleteLayoutParam,UnknownId"
            android:gravity="end" />
    </RelativeLayout>
</LinearLayout>
