<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#fff"
    android:orientation="vertical"
    tools:context="com.example.dev.techbuck.Registration">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp">

        <de.hdodenhof.circleimageview.CircleImageView
            android:id="@+id/image"
            android:layout_width="120dp"
            android:layout_height="120dp"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:src="@drawable/default_image"
            app:civ_border_color="#b1adad"
            app:civ_border_width="2dp" />

        <ImageButton
            android:id="@+id/importimage"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="100dp"
            android:layout_toRightOf="@id/image"
            android:background="#fff"
            android:src="@drawable/edit" />
    </RelativeLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        app:errorEnabled="true">


        <EditText
            android:id="@+id/unm"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:hint="@string/enter_display_name"
            android:maxLines="1"
            android:nextFocusDown="@id/ed_email"
            android:padding="10dp"
            android:singleLine="true" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true">


        <EditText
            android:id="@+id/ed_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:hint="@string/enter_email"
            android:inputType="textEmailAddress"
            android:nextFocusDown="@id/pw"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:errorEnabled="true"
        app:passwordToggleEnabled="true">

        <EditText
            android:id="@+id/pw"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/edittext_border"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:nextFocusDown="@id/submit"
            android:padding="10dp" />
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"

        android:background="@drawable/button"
        android:text="@string/submit"


        android:textAllCaps="false" />
</LinearLayout>
